src/test/deca/codegen/valid/simple_decl2.deca
// Description:
//   Test d'une declaration
//
// Resultats:
//    ok
// 

{
    float a;
}
